Fix styling of variant calling form. Add col-md-12 to the form tab panel to match the other tab panels, this gives the correct left and right margins. Change the checkbox list to use a grid layout. This makes it work on tablet and mobile displays. There is currently a hardcoded value of 160px which is meant to represent the width of the widest checkbox in the list. Need a better way to set this more dynamically, but even if it overflows this it should still display fully, just with some word wrapping.

--- a/source/portal/static/portal/css/portal.css
+++ b/source/portal/static/portal/css/portal.css
@@ -61,7 +61,14 @@
   overflow-x: scroll;
 }
 
+#id_samples {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 160px);
+  column-gap: 0.5em;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
 #id_samples > .checkbox {
-  display: inline-block;
-  width: 20%;
+  margin-top: -5px;
 }
